add jib resources